Fixing code smells and other errors