@@ -1,19 +1,14 @@
 package com.dro.pfgmockfw.utils;
 
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
-import java.util.*;
-import java.util.stream.Collectors;
-
 import com.dro.pfgmockfw.exception.NoDataAvailableException;
 import lombok.experimental.UtilityClass;
 import lombok.extern.slf4j.Slf4j;
+
+import java.io.File;
+import java.io.InputStream;
+import java.net.URL;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
 
 @UtilityClass
 @Slf4j
@@ -44,7 +39,7 @@ public class ResourceUtils {
         return Optional.ofNullable(files)
                 .map(fs -> Arrays.stream(fs)
                         .map(File::getName)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .orElse(Collections.emptyList());
     }
 
